--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-final-form": "^3.6.7",
     "react-google-tag-manager": "^2.2.1",
     "react-highlight-words": "^0.16.0",
+    "react-html-parser": "^2.0.2",
     "react-intercom": "^1.0.15",
     "react-modal": "^3.6.1",
     "react-redux": "^5.1.0",
@@ -98,6 +99,7 @@
     "@types/next": "^7.0.1",
     "@types/react": "^16.4.16",
     "@types/react-highlight-words": "^0.16.0",
+    "@types/react-html-parser": "^2.0.1",
     "@types/react-modal": "^3.6.0",
     "@types/react-redux": "^6.0.9",
     "@types/react-scroll": "^1.5.4",
