--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@breadhead/with-scroll-lock": "^1.2.4",
     "@bugsnag/js": "^6.0.0",
     "@bugsnag/plugin-react": "^6.0.0",
+    "@sanity/client": "^1.149.7",
+    "@sanity/image-url": "^0.140.17",
     "@types/object-hash": "^1.2.0",
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.13.1",
     "args-parser": "^1.1.0",
-    "axios": "^0.18.0",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "date-fns": "^1.30.1",
     "dayjs": "^1.8.0",
     "escape-string-regexp": "^1.0.5",
@@ -40,6 +43,8 @@
     "less": "^3.8.1",
     "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.11",
+    "lodash-es": "^4.17.15",
+    "mobx-state-tree": "^3.15.0",
     "nanoid": "^2.0.0",
     "nanomerge": "^0.2.0",
     "next": "^9.3.4",
@@ -66,6 +71,7 @@
     "react-yandex-maps": "^3.0.2",
     "recharts": "^1.6.2",
     "recompose": "^0.30.0",
+    "redis": "^3.0.2",
     "redux": "^4.0.1",
     "redux-clear": "^1.1.2",
     "redux-devtools-extension": "^2.13.2",
