--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "pm2 restart ecosystem.config.js",
     "types": "tsc",
     "test": "jest",
-    "circular": "madge --circular --extensions ts ./",
-    "lint": "eslint \"./**/*.{ts,tsx}\""
+    "lint": "eslint \"./**/*.{ts,tsx}\"",
+    "fullcheck": "yarn types && yarn lint && yarn test"
   },
   "dependencies": {
     "@breadhead/form-saver": "^1.0.3",
