--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "antd": "^3.13.1",
     "args-parser": "^1.1.0",
     "axios": "^0.19.2",
+    "base-64": "^0.1.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
