--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "jsx": "preserve",
-    "lib": ["dom", "es2017"],
+    "lib": [
+      "dom",
+      "es2017"
+    ],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
     "preserveConstEnums": true,
     "removeComments": false,
     "skipLibCheck": true,
@@ -18,16 +19,30 @@
     "noImplicitAny": false,
     "target": "esnext",
     "paths": {
-      "@app/*": ["*"],
-      "@front/*": ["src/*"],
-      "redux-windowsize": ["src/types/reduxWindowsize.d.ts"],
-      "plural-ru": ["src/types/plural-ru.d.ts"]
+      "@app/*": [
+        "*"
+      ],
+      "@front/*": [
+        "src/*"
+      ],
+      "redux-windowsize": [
+        "src/types/reduxWindowsize.d.ts"
+      ],
+      "plural-ru": [
+        "src/types/plural-ru.d.ts"
+      ]
     },
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ]
 }
