--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "types": "tsc",
     "test": "jest",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
-    "fullcheck": "yarn types && yarn lint && yarn test"
+    "fullcheck": "yarn types && yarn lint && yarn test",
+    "circular": "madge --circular --extensions ts,tsx ./src"
   },
   "dependencies": {
     "@breadhead/form-saver": "^1.0.3",
