--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@breadhead/with-scroll-lock": "^1.2.4",
     "@bugsnag/js": "^6.0.0",
     "@bugsnag/plugin-react": "^6.0.0",
+    "@n8tb1t/use-scroll-position": "^1.0.43",
     "@sanity/client": "^1.149.7",
     "@sanity/image-url": "^0.140.17",
     "@types/object-hash": "^1.2.0",
