--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "fullcheck": "yarn types && yarn lint && yarn test",
-    "circular": "madge --circular --extensions ts,tsx ./src"
+    "circular": "madge --circular --extensions ts,tsx ./*"
   },
   "dependencies": {
     "@breadhead/form-saver": "^1.0.3",
@@ -34,7 +34,7 @@
     "dayjs": "^1.8.0",
     "escape-string-regexp": "^1.0.5",
     "express": "^4.16.4",
-    "final-form": "^4.10.0",
+    "final-form": "^4.19.1",
     "http-status-codes": "^1.3.0",
     "ignore-not-found-export-plugin": "^1.0.1",
     "intercom-next": "^1.1.8",
@@ -61,13 +61,13 @@
     "query-string": "^6.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-final-form": "^3.6.7",
+    "react-final-form": "^6.4.0",
     "react-google-tag-manager": "^2.2.1",
     "react-highlight-words": "^0.16.0",
     "react-html-parser": "^2.0.2",
     "react-intercom": "^1.0.15",
     "react-modal": "^3.6.1",
-    "react-redux": "^5.1.0",
+    "react-redux": "^7.2.0",
     "react-transition-group": "^2.5.1",
     "react-yandex-maps": "^3.0.2",
     "recharts": "^1.6.2",
