--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ignore-not-found-export-plugin": "^1.0.1",
     "intercom-next": "^1.1.8",
     "intercom-react": "^1.0.0-alpha.6",
+    "is-mobile": "^2.2.1",
     "js-cookie": "^2.2.1",
     "js-file-download": "^0.4.5",
     "less": "^3.8.1",
