--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "store2": "^2.7.1",
     "svg-sprite-loader": "^4.1.3",
     "tsoption": "^0.7.0",
+    "use-key-hook": "^1.5.0",
     "yup": "^0.26.6"
   },
   "devDependencies": {
