--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^4.16.4",
     "final-form": "^4.19.1",
     "get-youtube-id": "^1.0.1",
+    "http-proxy-middleware": "^1.0.3",
     "http-status-codes": "^1.3.0",
     "ignore-not-found-export-plugin": "^1.0.1",
     "intercom-next": "^1.1.8",
