--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@sanity/image-url": "^0.140.17",
     "@types/object-hash": "^1.2.0",
     "@types/react-share": "^3.0.3",
+    "@types/url-parse": "^1.4.3",
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.13.1",
     "args-parser": "^1.1.0",
@@ -90,6 +91,7 @@
     "store2": "^2.7.1",
     "svg-sprite-loader": "^4.1.3",
     "tsoption": "^0.7.0",
+    "url-parse": "^1.4.7",
     "use-key-hook": "^1.5.0",
     "yup": "^0.26.6"
   },
